# TestCapitalCom

./: .gitignore  conf.py  conftest.py  main.py  poetry.lock.old  pyproject.toml  pytest.ini
.github/workflows/: 1_for_ubuntu_all.yml  check_code.yml  for_ubunru_Pavel.yml  for_ubuntu_!_all.yml  for_ubuntu_Aleksandr.yml  for_ubuntu_Alexander.yml  for_ubuntu_Andrey.yml  for_ubuntu_Anna.yml  for_ubuntu_Mila_d.yml  for_ubuntu_Mila_p.yml  for_ubuntu_Suleyman.yml  for_ubuntu_alex.yml  for_ubuntu_andrey.yml  for_ubuntu_chrome_alex.yml  for_ubuntu_chrome_all.yml  for_ubuntu_chrome_mila.yml  for_ubuntu_chrome_mila_p.yml  for_ubuntu_chrome_suleyman.yml  for_ubuntu_mila_d.yml  for_ubuntu_mila_p.yml  for_ubuntu_suleyman.yml  test_capital_com_for_macos_chrome.yml  test_capital_com_for_ubuntu_chrome.yml
pages/: base_page.py  captcha.py  conditions.py
pages/AppStore/: app_store.py
pages/Capital/: capital.py  capital_locators.py
pages/Education/: The_basics_of_trading.py  The_basics_of_trading_locators.py  Trading_psychology_guide_locators.py  commodities_trading_locators.py  glossary.py  learn_glossary.py  learn_to_trade.py  learn_to_trade_locators.py  shares_trading_locators.py  test.py  trading_courses_locators.py
pages/Elements/: AssertClass.py  BlockStepTrading.py  ButtonBuyInContentBlock.py  ButtonBuyInTable.py  ButtonCounter.py  ButtonCreateAccount.py  ButtonCreateAccountArticle.py  ButtonCreateAccountBlockOurCourses.py  ButtonCreateDemoAccBlockBuildYourSkills.py  ButtonDownloadAppStore.py  ButtonInBanner.py  (+24 more)
test_data/: app_store_data.py  trading_platform_data.py
tests/: bild_dynamic_arg.py  build_dynamic_arg.py
(+196 files in other folders)
