[tool.poetry]
name = "TestCapitalCom"
version = "0.1.0"
description = ""
authors = ["Alexander Tomelo <qa.tomelo.an@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
webdriver-manager = "^4.0.0"
selenium = "^4.10.0"
pytest-html = "^3.2.0"
allure-pytest = "^2.12.0"
pytest-xdist = "^3.1.0"
#pyautogui = "^0.9.53"
psutil = "^5.9.4"
speedtest-cli = "^2.1.3"
#aiogram = "^2.24"
black = "^23.7.0"
flake8 = "^6.1.0"
#ruff
#memory-profiler

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
